--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
         <a-assets>
-            <a-asset-item id="animated-asset" src="https://github.com/archcomix/archcomix.github.io/blob/main/hammer.glb"></a-asset-item>
+            <a-asset-item id="animated-asset" src="https://github.com/creativewax/creativewax.github.io/blob/main/hammer.glb"></a-asset-item>
         </a-assets> 
 
-        <a-marker type="pattern" preset = "custom" url ="https://github.com/archcomix/archcomix.github.io/blob/main/pattern-EM%20logo%20no%20words.patt">
+        <a-marker type="pattern" preset = "custom" url ="https://github.com/creativewax/creativewax.github.io/blob/main/pattern-EM%20logo%20no%20words.patt">
          </a-marker>
 
         <a-marker id="animated-marker" type='barcode' value='6'>
