--- a/index.html
+++ b/index.html
@@ -11,16 +11,13 @@
     <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
 
         <a-assets>
-            <a-asset-item id="animated-asset" src="https://github.com/creativewax/creativewax.github.io/hammer.glb"></a-asset-item>
+            <a-asset-item id="animated-asset" src="./hammer.glb"></a-asset-item>
         </a-assets> 
 
-        <a-marker type="pattern" preset = "custom" url ="https://github.com/creativewax/creativewax.github.io/pattern-EM%20logo%20no%20words.patt">
-         </a-marker>
+        <a-marker type="pattern" preset = "custom" url ="./pattern-EM%20logo%20no%20words.patt"></a-marker>
 
         <a-marker id="animated-marker" type='barcode' value='6'>
-            <a-entity gltf-model="#animated-asset"
-                      scale="2">
-            </a-entity>
+            <a-entity gltf-model="#animated-asset"></a-entity>
         </a-marker>
 
         <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
