--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <a-marker type="pattern" preset = "custom" url ="./pattern-EM%20logo%20no%20words.patt"></a-marker>
 
-        <a-marker-camera preset='hiro'>
+        <a-marker-camera id="animated-marker" type='barcode' value='6'>
             <a-entity gltf-model="#animated-asset"></a-entity>
         </a-marker-camera>
 
