--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
     <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-    <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;'>
-
+    <a-scene embedded arjs>
         <a-assets>
             <a-asset-item id="animated-asset" src="./hammer.glb"></a-asset-item>
         </a-assets> 
@@ -17,8 +16,7 @@
         <a-marker-camera type="pattern" url ="./marker.patt">
             <a-entity gltf-model="#animated-asset"></a-entity>
         </a-marker-camera>
-
-        <!-- use this <a-entity camera> to support multiple-markers, otherwise use <a-marker-camera> instead of </a-marker> -->
+        
         <a-entity camera></a-entity>
     </a-scene>
 </body>
