--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
             <a-asset-item id="animated-asset" src="./hammer.glb"></a-asset-item>
         </a-assets> 
 
-        <a-marker-camera type="pattern" url ="./marker.patt">
-            <a-entity gltf-model="#animated-asset"></a-entity>
-        </a-marker-camera>
-        
-        <a-entity camera></a-entity>
+        <a-entity gltf-model="#animated-asset"></a-entity>
+
+        <a-marker-camera type="pattern" url ="./marker.patt"></a-marker-camera>
     </a-scene>
 </body>
 </html>
