--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a-asset-item id="animated-asset" src="./hammer.glb"></a-asset-item>
         </a-assets> 
 
-        <a-entity gltf-model="#animated-asset"></a-entity>
+        <a-entity gltf-model="#animated-asset" scale="0.1"></a-entity>
 
         <a-marker-camera type="pattern" url="./marker.patt"></a-marker-camera>
     </a-scene>
