--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
     <a-scene embedded arjs>
         <a-assets>
-            <a-asset-item id="animated-asset" src="./hammer.glb"></a-asset-item>
+            <a-asset-item id="animated-asset" src="./scene.glb"></a-asset-item>
         </a-assets> 
 
-        <a-entity gltf-model="#animated-asset" scale="0.1"></a-entity>
+        <a-entity gltf-model="#animated-asset" scale="1"></a-entity>
 
         <a-marker-camera type="pattern" url="./marker.patt"></a-marker-camera>
     </a-scene>
