--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
             <a-asset-item id="animated-asset" src="./scene.glb"></a-asset-item>
         </a-assets> 
 
-        <a-marker-camera type="pattern" url="./marker.patt">
-            <a-entity gltf-model="#animated-asset" scale="0.1"></a-entity>
-        </a-marker-camera>
+        <a-marker type="pattern" url="./marker.patt">
+            <a-entity gltf-model="#animated-asset" scale="0.01"></a-entity>
+        </a-marker>
+
+        <a-entity camera></a-entity>
     </a-scene>
 </body>
 </html>
