--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
     <!-- we add detectionMode and matrixCodeType to tell AR.js to recognize barcode markers -->
-    <a-scene embedded arjs>
+    <a-scene embedded arjs light="defaultLightsEnabled: false">
         <a-assets>
             <a-asset-item id="animated-asset" src="./scene.glb"></a-asset-item>
         </a-assets> 
