--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 <body style='margin : 0px; overflow: hidden;'>
     <a-scene embedded arjs light="defaultLightsEnabled: false">
-        <a-entity light="type: ambient; color: #FFF"></a-entity>
-        <a-entity light="type: directional; color: #FFF; intensity: 1.0" position="-0.5 -0.5 0"></a-entity>
+        <a-entity light="type: hemisphere; color: #FFF; groundColor: #FFF; intensity: 2"></a-entity>
         
         <a-assets>
             <a-asset-item id="animated-asset" src="./scene.glb"></a-asset-item>
